// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildDoctorSummaryHtml snapshots newborn stage, 14 days of feedings + diapers 1`] = `
"<!DOCTYPE html>
<html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>
  * { margin: 0; padding: 0; box-sizing: border-box; }
  body { font-family: system-ui, -apple-system, sans-serif; color: #475569; background: #fff; }
  .header { background: rgb(190, 24, 93); padding: 24px 20px; color: #fff; }
  .header h1 { font-size: 28px; font-family: Georgia, serif; margin-bottom: 2px; }
  .header .subtitle { font-size: 8px; letter-spacing: 2px; text-transform: uppercase; opacity: 0.9; }
  .header .date { font-size: 11px; margin-top: 6px; opacity: 0.85; }
  .profile-card { background: #fff1f2; border-radius: 12px; padding: 14px 18px; margin: 16px 20px; }
  .profile-card .name { font-size: 14px; font-weight: 700; color: rgb(190, 24, 93); font-family: Georgia, serif; }
  .profile-card .detail { font-size: 11px; color: #475569; margin-top: 3px; }
  .section-title { font-size: 16px; font-weight: 700; color: rgb(190, 24, 93); font-family: Georgia, serif; margin: 20px 20px 8px; }
  .section-subtitle { font-size: 11px; color: #475569; margin: 0 20px 12px; }
  .stat-grid { display: flex; gap: 12px; margin: 0 20px 16px; }
  .stat-box { flex: 1; background: #fff1f2; border-radius: 12px; padding: 14px; }
  .stat-box .label { font-size: 8px; font-weight: 700; text-transform: uppercase; letter-spacing: 1px; color: rgb(236, 72, 153); margin-bottom: 8px; }
  .stat-box .row { font-size: 11px; color: #475569; margin-bottom: 4px; }
  .card { background: #fff1f2; border-radius: 12px; padding: 14px 18px; margin: 0 20px 12px; page-break-inside: avoid; }
  .card .card-title { font-size: 12px; font-weight: 700; color: rgb(236, 72, 153); margin-bottom: 6px; }
  .card .card-text { font-size: 11px; color: #475569; line-height: 1.5; }
  .footer { background: rgb(190, 24, 93); padding: 16px; text-align: center; color: #fff; font-size: 10px; font-weight: 700; margin-top: 24px; }
  .privacy { font-size: 8px; color: #94a3b8; text-align: center; margin: 8px 20px; }
  table { width: calc(100% - 40px); margin: 0 20px 16px; border-collapse: collapse; }
  th { background: #fff1f2; font-size: 9px; font-weight: 700; color: rgb(190, 24, 93); text-transform: uppercase; letter-spacing: 0.5px; padding: 8px 10px; text-align: left; }
  td { font-size: 11px; color: #475569; padding: 7px 10px; border-bottom: 1px solid #fce7f3; }
  tr:last-child td { border-bottom: none; }
</style></head>
<body>
<div class="header">
  <h1>Nestly</h1>
  <div class="subtitle">DOCTOR VISIT SUMMARY</div>
  <div class="date">WEDNESDAY, 22 APRIL 2026</div>
</div>
<div class="profile-card">
  <div class="name">Mama: Tinashe</div>
  <div class="detail">Current stage: Newborn care  |  EDD 15/04/2026</div>
</div>
<div class="section-title">Last 14 days</div>
<div class="section-subtitle">Summary of self-tracked readings. Bring this sheet to your appointment.</div>
<div class="stat-grid">
  <div class="stat-box">
    <div class="label">Vitals</div>
    <div class="row">Weight: ---</div>
    <div class="row">Blood pressure: ---</div>
    <div class="row">Avg sleep: 3.0 hrs</div>
    <div class="row">Symptoms logged: 0</div>
    <div class="row">Readings: 0 weight, 0 BP</div>
  </div>
  <div class="stat-box">
    <div class="label">Trackers</div>
    <div class="row">Feedings: 3</div>
         <div class="row">Diaper changes: 3</div>
         <div class="row">Medications: 1</div>
  </div>
</div>
<div class="section-title">Nutrition averages</div>
<div class="card"><div class="card-text">No meals logged in the last 14 days.</div></div>

<div class="section-title">Medications logged</div>
       <div class="card"><div class="card-text">Vitamin D drops</div></div>
<div class="footer">FOR YOUR MIDWIFE OR DOCTOR.</div>
<div class="privacy">Generated by Nestly. Your data stays on your device.</div>
</body></html>"
`;

exports[`buildDoctorSummaryHtml snapshots pre-pregnancy stage, sparse vitals only, no symptoms, no meds 1`] = `
"<!DOCTYPE html>
<html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>
  * { margin: 0; padding: 0; box-sizing: border-box; }
  body { font-family: system-ui, -apple-system, sans-serif; color: #475569; background: #fff; }
  .header { background: rgb(190, 24, 93); padding: 24px 20px; color: #fff; }
  .header h1 { font-size: 28px; font-family: Georgia, serif; margin-bottom: 2px; }
  .header .subtitle { font-size: 8px; letter-spacing: 2px; text-transform: uppercase; opacity: 0.9; }
  .header .date { font-size: 11px; margin-top: 6px; opacity: 0.85; }
  .profile-card { background: #fff1f2; border-radius: 12px; padding: 14px 18px; margin: 16px 20px; }
  .profile-card .name { font-size: 14px; font-weight: 700; color: rgb(190, 24, 93); font-family: Georgia, serif; }
  .profile-card .detail { font-size: 11px; color: #475569; margin-top: 3px; }
  .section-title { font-size: 16px; font-weight: 700; color: rgb(190, 24, 93); font-family: Georgia, serif; margin: 20px 20px 8px; }
  .section-subtitle { font-size: 11px; color: #475569; margin: 0 20px 12px; }
  .stat-grid { display: flex; gap: 12px; margin: 0 20px 16px; }
  .stat-box { flex: 1; background: #fff1f2; border-radius: 12px; padding: 14px; }
  .stat-box .label { font-size: 8px; font-weight: 700; text-transform: uppercase; letter-spacing: 1px; color: rgb(236, 72, 153); margin-bottom: 8px; }
  .stat-box .row { font-size: 11px; color: #475569; margin-bottom: 4px; }
  .card { background: #fff1f2; border-radius: 12px; padding: 14px 18px; margin: 0 20px 12px; page-break-inside: avoid; }
  .card .card-title { font-size: 12px; font-weight: 700; color: rgb(236, 72, 153); margin-bottom: 6px; }
  .card .card-text { font-size: 11px; color: #475569; line-height: 1.5; }
  .footer { background: rgb(190, 24, 93); padding: 16px; text-align: center; color: #fff; font-size: 10px; font-weight: 700; margin-top: 24px; }
  .privacy { font-size: 8px; color: #94a3b8; text-align: center; margin: 8px 20px; }
  table { width: calc(100% - 40px); margin: 0 20px 16px; border-collapse: collapse; }
  th { background: #fff1f2; font-size: 9px; font-weight: 700; color: rgb(190, 24, 93); text-transform: uppercase; letter-spacing: 0.5px; padding: 8px 10px; text-align: left; }
  td { font-size: 11px; color: #475569; padding: 7px 10px; border-bottom: 1px solid #fce7f3; }
  tr:last-child td { border-bottom: none; }
</style></head>
<body>
<div class="header">
  <h1>Nestly</h1>
  <div class="subtitle">DOCTOR VISIT SUMMARY</div>
  <div class="date">WEDNESDAY, 22 APRIL 2026</div>
</div>
<div class="profile-card">
  <div class="name">Mama: Chipo</div>
  <div class="detail">Current stage: Pre-pregnancy  |  EDD 05/01/2027  |  Week 3</div>
</div>
<div class="section-title">Last 14 days</div>
<div class="section-subtitle">Summary of self-tracked readings. Bring this sheet to your appointment.</div>
<div class="stat-grid">
  <div class="stat-box">
    <div class="label">Vitals</div>
    <div class="row">Weight: 62 kg</div>
    <div class="row">Blood pressure: 115/72</div>
    <div class="row">Avg sleep: --- hrs</div>
    <div class="row">Symptoms logged: 0</div>
    <div class="row">Readings: 1 weight, 1 BP</div>
  </div>
  <div class="stat-box">
    <div class="label">Trackers</div>
    <div class="row">Kick sessions: 0 (0 kicks)</div>
         <div class="row">Kegel sessions: 0</div>
         <div class="row">Medications: 0</div>
  </div>
</div>
<div class="section-title">Nutrition averages</div>
<div class="card"><div class="card-text">No meals logged in the last 14 days.</div></div>


<div class="footer">FOR YOUR MIDWIFE OR DOCTOR.</div>
<div class="privacy">Generated by Nestly. Your data stays on your device.</div>
</body></html>"
`;

exports[`buildDoctorSummaryHtml snapshots pregnancy stage, 14 days of vitals + nutrition + symptoms + meds 1`] = `
"<!DOCTYPE html>
<html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><style>
  * { margin: 0; padding: 0; box-sizing: border-box; }
  body { font-family: system-ui, -apple-system, sans-serif; color: #475569; background: #fff; }
  .header { background: rgb(190, 24, 93); padding: 24px 20px; color: #fff; }
  .header h1 { font-size: 28px; font-family: Georgia, serif; margin-bottom: 2px; }
  .header .subtitle { font-size: 8px; letter-spacing: 2px; text-transform: uppercase; opacity: 0.9; }
  .header .date { font-size: 11px; margin-top: 6px; opacity: 0.85; }
  .profile-card { background: #fff1f2; border-radius: 12px; padding: 14px 18px; margin: 16px 20px; }
  .profile-card .name { font-size: 14px; font-weight: 700; color: rgb(190, 24, 93); font-family: Georgia, serif; }
  .profile-card .detail { font-size: 11px; color: #475569; margin-top: 3px; }
  .section-title { font-size: 16px; font-weight: 700; color: rgb(190, 24, 93); font-family: Georgia, serif; margin: 20px 20px 8px; }
  .section-subtitle { font-size: 11px; color: #475569; margin: 0 20px 12px; }
  .stat-grid { display: flex; gap: 12px; margin: 0 20px 16px; }
  .stat-box { flex: 1; background: #fff1f2; border-radius: 12px; padding: 14px; }
  .stat-box .label { font-size: 8px; font-weight: 700; text-transform: uppercase; letter-spacing: 1px; color: rgb(236, 72, 153); margin-bottom: 8px; }
  .stat-box .row { font-size: 11px; color: #475569; margin-bottom: 4px; }
  .card { background: #fff1f2; border-radius: 12px; padding: 14px 18px; margin: 0 20px 12px; page-break-inside: avoid; }
  .card .card-title { font-size: 12px; font-weight: 700; color: rgb(236, 72, 153); margin-bottom: 6px; }
  .card .card-text { font-size: 11px; color: #475569; line-height: 1.5; }
  .footer { background: rgb(190, 24, 93); padding: 16px; text-align: center; color: #fff; font-size: 10px; font-weight: 700; margin-top: 24px; }
  .privacy { font-size: 8px; color: #94a3b8; text-align: center; margin: 8px 20px; }
  table { width: calc(100% - 40px); margin: 0 20px 16px; border-collapse: collapse; }
  th { background: #fff1f2; font-size: 9px; font-weight: 700; color: rgb(190, 24, 93); text-transform: uppercase; letter-spacing: 0.5px; padding: 8px 10px; text-align: left; }
  td { font-size: 11px; color: #475569; padding: 7px 10px; border-bottom: 1px solid #fce7f3; }
  tr:last-child td { border-bottom: none; }
</style></head>
<body>
<div class="header">
  <h1>Nestly</h1>
  <div class="subtitle">DOCTOR VISIT SUMMARY</div>
  <div class="date">WEDNESDAY, 22 APRIL 2026</div>
</div>
<div class="profile-card">
  <div class="name">Mama: Rumbi</div>
  <div class="detail">Current stage: Pregnancy  |  EDD 22/04/2026  |  Week 40</div>
</div>
<div class="section-title">Last 14 days</div>
<div class="section-subtitle">Summary of self-tracked readings. Bring this sheet to your appointment.</div>
<div class="stat-grid">
  <div class="stat-box">
    <div class="label">Vitals</div>
    <div class="row">Weight: 68.2 kg</div>
    <div class="row">Blood pressure: 118/76</div>
    <div class="row">Avg sleep: 7.5 hrs</div>
    <div class="row">Symptoms logged: 2</div>
    <div class="row">Readings: 3 weight, 2 BP</div>
  </div>
  <div class="stat-box">
    <div class="label">Trackers</div>
    <div class="row">Kick sessions: 2 (18 kicks)</div>
         <div class="row">Kegel sessions: 2</div>
         <div class="row">Medications: 2</div>
  </div>
</div>
<div class="section-title">Nutrition averages</div>
<div class="card"><div class="card-text">Per logged day: 375 kcal | 18g protein | 4mg iron</div>
       <div class="card-text">Total meals logged: 2 across 2 day(s)</div></div>
<div class="section-title">Recent symptoms</div>
       <div class="card"><div class="card-text">21/04/2026: Nausea (severity 4/10)<br/>17/04/2026: Back pain (severity 6/10)</div></div>
<div class="section-title">Medications logged</div>
       <div class="card"><div class="card-text">Folic acid, Iron</div></div>
<div class="footer">FOR YOUR MIDWIFE OR DOCTOR.</div>
<div class="privacy">Generated by Nestly. Your data stays on your device.</div>
</body></html>"
`;
